--- a/adaptable.tex
+++ b/adaptable.tex
@@ -109,7 +109,7 @@ Global Change Information System}
     \begin{columns}
         \begin{column}{0.6\textwidth}
             \fbox{
-            \includegraphics[height=0.8\textheight]{gcis-nca3.png}
+            \includegraphics[height=0.8\textheight]{img/gcis-nca3.png}
             }
         \end{column}
         \begin{column}{0.4\textwidth}
@@ -141,7 +141,7 @@ Global Change Information System}
 \frame{
     \frametitle{\insertsubsectionhead}
     \centering
-    \includegraphics[height=0.9\textheight]{ncaweb-drawn.pdf}
+    \includegraphics[height=0.9\textheight]{img/ncaweb-drawn.pdf}
 }
 
 \subsection{Provenance}
@@ -156,7 +156,7 @@ Global Change Information System}
 \frame{
     \frametitle{\insertsubsectionhead}
     \begin{center}
-    \includegraphics[height=0.9\textheight]{sealevel/figure-to-platform.pdf}
+    \includegraphics[height=0.9\textheight]{img/figure-to-platform.pdf}
     \end{center} 
 }
 
@@ -258,7 +258,7 @@ Global Change Information System}
 \frame{
     \frametitle{\insertsubsectionhead}
     \begin{center}
-    \includegraphics[width=0.9\textwidth]{arch.pdf}
+    \includegraphics[width=0.9\textwidth]{img/arch.pdf}
     \end{center} 
 }
 
