--- a/adaptable.tex
+++ b/adaptable.tex
@@ -98,7 +98,7 @@ Global Change Information System}
     The content included 161 findings, 284 figures, 3,395 bibliographic references (journal
     articles, books, reports).\\
     \medskip
-     The GCIS facilitated the assembly of the report by providing common {\bf identifiers} for
+    The GCIS facilitated the assembly of the report by providing common \textcolor{blue}{identifiers} for
      resources and concepts, providing a common web interface for entering and viewing information,
      as well as an API for adding and removing information using a variety of formats.
 \note{Endnote, Drupal, MS Word, Excel, Google Docs, Graphics Software}
@@ -107,15 +107,16 @@ Global Change Information System}
 \frame{
     \frametitle{\insertsubsectionhead}
     \begin{columns}
-        \begin{column}{0.6\textwidth}
+        \begin{column}{0.4\textwidth}
             \fbox{
-            \includegraphics[height=0.8\textheight]{img/gcis-nca3.png}
+            \includegraphics[width=0.5\textheight]{img/gcis-nca3.png}
             }
         \end{column}
-        \begin{column}{0.4\textwidth}
-            data.globalchange.gov\\
-            /report/nca3\\
-            .html
+        \begin{column}{0.6\textwidth}
+            \small{http://data.globalchange.gov\textcolor{blue}{/report/nca3}}
+            \small{http://data.globalchange.gov\textcolor{blue}{/report/nca3}.html}
+            \small{http://data.globalchange.gov\textcolor{blue}{/report/nca3}.json}
+            \small{http://data.globalchange.gov\textcolor{blue}{/report/nca3}.ttl}
         \end{column}
     \end{columns}
     \note{The html is implicit but can be replaced with json (or yaml), ttl for turtle, or other rdf serializations like ntriples, rdf
@@ -129,11 +130,11 @@ Global Change Information System}
 \frame{
     \frametitle{\insertsubsectionhead}
     
-            A website, \url{http://nca2014.globalchange.gov}, was released concurrently with the report.
+    A website, \textcolor{blue}{\url{http://nca2014.globalchange.gov}}, was released concurrently with the report.
             The site received over 200,000 visits in the first two days after launch and continues to
             receive frequent main stream media attention.\\
             \medskip
-            GCIS serves as the backend : the website sends client side requests to \url{http://data.globalchange.gov}
+            GCIS serves as the backend; the website \textcolor{blue}{sends client side requests to \url{http://data.globalchange.gov}}
             and receives JSON responses which it uses to populate elements of some pages dynamically.\\
 
 }
@@ -317,12 +318,14 @@ Global Change Information System}
 \begin{frame}[fragile]
     \frametitle{\insertsubsectionhead}
     Sample turtle template :
+    \begin{small}
     \begin{Verbatim}[commandchars=\\\{\}]
-    {\bf <%= article->uri %>} a gcis:Article;
-    {\bf <%= article->uri %>} dcterms:isPartOf
-        {\bf <%= article->journal->uri %>};
+    \textcolor{blue}{<%= article->uri %>} a gcis:Article;
+    \textcolor{blue}{<%= article->uri %>} dcterms:isPartOf
+        \textcolor{blue}{<%= article->journal->uri %>};
 
     \end{Verbatim}
+    \end{small}
 \end{frame}
 
 \section{Conclusion, Ongoing Work, Future Plans}
