--- a/adaptable.tex
+++ b/adaptable.tex
@@ -48,6 +48,7 @@ Global Change Information System}
 \inst{4} National Aeronautics and Space Administration
 }
 
+
 % \begingroup
 % \makeatletter
 % \setlength{\hoffset}{-.5\beamer@sidebarwidth}
@@ -58,7 +59,23 @@ Global Change Information System}
 \titlepage
 \begin{center}
 \url{http://data.globalchange.gov}\\
-\url{http://github.com/USGCRP/gcis}
+\url{http://github.com/USGCRP/gcis}\\
+\medskip
+\includegraphics[height=0.25in]{logo/USDA.eps}
+\includegraphics[height=0.30in]{logo/DOC.eps}
+\includegraphics[height=0.25in]{logo/DOD.eps}
+\includegraphics[height=0.25in]{logo/DOE_logo.pdf}
+\includegraphics[height=0.25in]{logo/HHS_logo.pdf}
+\includegraphics[height=0.25in]{logo/DOI_logo.pdf}
+\includegraphics[height=0.25in]{logo/DOS.eps}
+\includegraphics[height=0.25in]{logo/DOT.eps}
+\includegraphics[height=0.25in]{logo/EPA.eps}
+\includegraphics[height=0.25in]{logo/NASA.eps}
+\includegraphics[height=0.25in]{logo/NSF.eps}
+\includegraphics[height=0.25in]{logo/SI.eps}
+\includegraphics[height=0.25in]{logo/USAID_logo.pdf}
+\includegraphics[height=0.25in]{logo/NSTC.eps}
+\includegraphics[height=0.25in]{logo/USGCRP.eps}
 \end{center}
 \end{frame}
 
@@ -279,6 +296,7 @@ Global Change Information System}
         \item CEOS : 206 = /platform/aqua
         \item Therefore PODAAC : AQUA = CEOS 206
     \end{itemize}
+    New sources of information may require changes to the information model.
 }
 
 \subsection{Schema Changes}
