--- a/adaptable.tex
+++ b/adaptable.tex
@@ -148,7 +148,7 @@ Global Change Information System}
     \frametitle{\insertsubsectionhead}
     
     A website, \textcolor{blue}{\url{http://nca2014.globalchange.gov}}, was released concurrently with the report.
-            The site received over 200,000 visits in the first two days after launch and continues to
+            The site received over 200,000 visits in the first two days after the launch and continues to
             receive frequent main stream media attention.\\
             \medskip
             GCIS serves as the backend; the website \textcolor{blue}{sends client-side requests to \url{http://data.globalchange.gov}}
@@ -379,6 +379,12 @@ to represent and connect new types of information}
         http://data.globalchange.gov/about (mailing list)\\
         http://www.globalchange.gov\\
         http://github.com/usgcrp/gcis
+    \end{center}
+    \medskip
+    \begin{center}
+        \tiny{Also thanks : Curt Tilmes, Hook Hua, Brian Wilson, Gerald Manipon, Bradley Akamine,
+            Amanda McQueen,\\ Peter Fox, Marshall Ma and the Tetherless World Institute at RPI
+        }
     \end{center}
 }
 
